// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-tile
      TEST_CLASSNAME
      {
        padding-bottom: 56.25%;
        position: relative;
        width: 100%;
      }
      &.y-tile > * {
        align-items: center;
        bottom: 0;
        display: flex;
        justify-content: center;
        left: 0;
        position: absolute;
        right: 0;
        top: 0;
        width: 100%;
      }
>
  test content
</div>
`;

exports[`<Tile /> with borderColor matches its snapshot 1`] = `
<div
  className=
      y-tile
      {
        padding-bottom: 56.25%;
        position: relative;
        width: 100%;
      }
      &.y-tile > * {
        align-items: center;
        border: solid 1px #6c98d9;
        bottom: 1px;
        display: flex;
        justify-content: center;
        left: 1px;
        position: absolute;
        right: 1px;
        top: 1px;
        width: 100%;
      }
>
  test content
</div>
`;

exports[`<Tile /> with default options matches its snapshot 1`] = `
<div
  className=
      y-tile
      {
        padding-bottom: 75%;
        position: relative;
        width: 100%;
      }
      &.y-tile > * {
        align-items: center;
        bottom: 0;
        display: flex;
        justify-content: center;
        left: 0;
        position: absolute;
        right: 0;
        top: 0;
        width: 100%;
      }
>
  test content
</div>
`;
